# x

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  index.html  life_cipher.py  main.py  params.json  prime_engine.py
shaders/: distortion.frag  fractal.frag  fractal.vert  mandelbulb.frag  milkdrop_blend.frag  milkdrop_composite.frag  milkdrop_display.frag  milkdrop_shapes.frag  milkdrop_shapes.vert  milkdrop_warp.frag  milkdrop_warp.vert  milkdrop_wave.frag  milkdrop_wave.vert  spectral.frag
src/: AppSettings.cpp  AppSettings.h  gl_includes.h  main.cpp
src/audio/: AudioCapture_mac.mm  AudioCapture_portaudio.cpp  BeatDetector.cpp  BeatDetector.h  IAudioCapture.h
src/fractal/: BlendController.cpp  BlendController.h  ColorSynth.cpp  ColorSynth.h  FractalEngine.cpp  FractalEngine.h  GlitchEngine.cpp  GlitchEngine.h
src/fx/: FftChain.cpp  FftChain.h
src/midi/: MidiGenerator.cpp  MidiGenerator.h  MidiInput.cpp  MidiInput.h  MidiMapper.cpp  MidiMapper.h  MidiOutput.cpp  MidiOutput.h
src/milkdrop/: EquationEvaluator.cpp  EquationEvaluator.h  MilkDropGLRenderer.cpp  MilkDropGLRenderer.h  MilkDropPreset.cpp  MilkDropPreset.h  PresetManager.cpp  PresetManager.h  PresetParser.cpp  PresetParser.h
src/remote/: RemoteControl.cpp  RemoteControl.h
src/renderer/: Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  VideoTexture.cpp  VideoTexture.h
src/stream/: RecordOutput.cpp  RecordOutput.h  StreamOutput.cpp  StreamOutput.h  VideoInput.cpp  VideoInput.h
src/ui/: EquationEditor.cpp  EquationEditor.h  FilePicker.h  FilePicker.mm  FilePicker_linux.cpp
tools/: convert_video.sh
